2020-07-27  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-sty.tex (tex4ht.sty): don't patch \shipout command.
	https://listserv.uni-heidelberg.de/cgi-bin/wa?A2=LATEX-L;d8558dd0.2007&S=

2020-07-26  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathjax.tex (mathjax-latex-4ht.4ht),
	* tex4ht-html4.tex (html4-math.4ht): added MathJaxConfig configuration.
	https://github.com/michal-h21/make4ht/issues/33

2020-07-26  Karl Berry  <karl@freefriends.org>

	* Makefile (diff-htfonts): rename from diff-ht-fonts, and also
	generate /tmp/htnew for new files. Other small name changes.

2020-07-25  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-newtx.tex,
	* Makefile: generate files for Newtx fonts
	https://puszcza.gnu.org.ua/bugs/index.php?236#postcomment

2020-07-18  Karl Berry  <karl@freefriends.org>

	* Makefile (update):  missing ) on "$(dest_src/", causing 
	"unterminated variable reference".
	(destdir): change to update.dir from .., to make it clearer
	this is a test target not in regular use.

2020-07-17 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): \rowcolor should have precedence over
	\columncolor in colortbl support.
	https://puszcza.gnu.org.ua/bugs/?163
	* tex4ht-html4.tex (html4.4ht): fixed Koma Script \paragraph.
	https://puszcza.gnu.org.ua/bugs/?176
	* tex4ht-html4.tex (html4.4ht): allow linebreak in long URLs.
	https://puszcza.gnu.org.ua/bugs/index.php?301

2020-07-16 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht): fixed eso-pic support.
	https://puszcza.gnu.org.ua/bugs/?231
	* tex4ht-4ht.tex (article.4ht,book.4ht,report.4ht,
	scrbook.4ht,scrreprt.4ht): fixed tocdepth handling.
	https://puszcza.gnu.org.ua/bugs/?228

2020-07-13 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht, ctex.4ht): added support for the
	ctex package.
	https://github.com/michal-h21/make4ht/issues/29

2020-07-10 Michal Hoftich  <michal.h21@gmail.com>
